maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:10: error: ':' expected but ',' found.
def trouveBiscuit(a,b){
                   ^JediEscaper:26: error: identifier expected but '}' found.
}
^