maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {


def indic(a:Int,b:Int){
	if(!aMurNord(a,b)){setIndication(a,b-1,getIndication(a,b)+1);indic(a,b-1)}
	if(!aMurOuest(a,b)){setIndication(a-1,b,getIndication(a,b)+1);indic(a-1,b)}
	
}
def trouveBiscuit(a,b){

    for(i <- 0 to getMondeLargeur -1){
    	a = i
    		if(aBiscuit(x,y)){ return()}
    		else{for(c <- 0 to getMondeHauteur - 1){
    			b = c    		
    			if(aBiscuit(x,y)){ return()}
    		}
    }
    }
}
var (x,y) = trouveBiscuit()
setIndication(x,y,0)
indic(x,y)
    
}
